add putitem method
